--- a/deploy.yaml
+++ b/deploy.yaml
@@ -2,27 +2,27 @@
 - name: Ansible Copy Local to Remote
   hosts: "{{hosts}}"
   vars:
-    src_path: "/var/lib/jenkins/workspace/k8s-pipeline/"
+    src_path: "/var/lib/jenkins/workspace/Zap_Pipeline/"
     dest_path: "/home/ansadmin"
     config_file_dest_path: "/home"
   tasks:
-    # - name: copying files with playbook
-    #   become: true
-    #   copy:
-    #     src: "{{ src_path }}"
-    #     dest: "{{ dest_path }}"
-    #     owner: ansadmin
-    #     group: ansadmin
-    #     mode: 0777
-    - name: build image
+    - name: copying files with playbook
       become: true
-      shell:
-        cmd: ./gradlew jibDockerBuild
-    - name: edit env path 
-      shell: "export PATH=$PATH:/usr/local/bin"
-    - name: start containers
-      shell:
-        cmd: docker-compose up
+      copy:
+        src: "{{ src_path }}"
+        dest: "{{ dest_path }}"
+        owner: ansadmin
+        group: ansadmin
+        mode: 0777
+    # - name: build image
+    #   become: true
+    #   shell:
+    #     cmd: ./gradlew jibDockerBuild
+    # - name: edit env path 
+    #   shell: "export PATH=$PATH:/usr/local/bin"
+    # - name: start containers
+    #   shell:
+    #     cmd: docker-compose up
 
 
 #try to use execute commands over ssh instead...
