--- a/deploy.yaml
+++ b/deploy.yaml
@@ -6,14 +6,17 @@
     dest_path: "/home/ansadmin"
     config_file_dest_path: "/home"
   tasks:
-    - name: copying files with playbook
-      become: true
-      copy:
-        src: "{{ src_path }}"
-        dest: "{{ dest_path }}"
-        owner: ansadmin
-        group: ansadmin
-        mode: 0777
+    # - name: copying files with playbook
+    #   become: true
+    #   copy:
+    #     src: "{{ src_path }}"
+    #     dest: "{{ dest_path }}"
+    #     owner: ansadmin
+    #     group: ansadmin
+    #     mode: 0777
+    - name: echo path
+      shell:
+        cmd: export PATH=$PATH:/usr/local/bin
     - name: create frontend
       shell:
         cmd: kubectl apply -f frontend.yaml
