--- a/deploy.yaml
+++ b/deploy.yaml
@@ -5,14 +5,14 @@
     dest_path: "/home/ansadmin"
     config_file_dest_path: "/home"
   tasks:
-    # - name: copying files with playbook
-    #   become: true
-    #   copy:
-    #     src: "{{ src_path }}"
-    #     dest: "{{ dest_path }}"
-    #     owner: ansadmin
-    #     group: ansadmin
-    #     mode: 0777
+    - name: copying files with playbook
+      become: true
+      copy:
+        src: "{{ src_path }}"
+        dest: "{{ dest_path }}"
+        owner: ansadmin
+        group: ansadmin
+        mode: 0777
     - name: echo path
       shell:
         cmd: export PATH=$PATH:/usr/local/bin
