--- a/hello-world/webapp/pom.xml
+++ b/hello-world/webapp/pom.xml
@@ -10,6 +10,22 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
+  <distributionManagement>
+    <site>
+      <id>site-server</id>
+      <name>Test Project Site</name>
+      <url>file:///tmp/maven-project-site</url>
+    </site>
+    <snapshotRepository>
+            <id>nexus</id>
+            <url>http://172.31.12.165:8081/repository/maven-snapshots/</url>          <!--Replace the Nexus Private IP in this line-->
+        </snapshotRepository>
+        <repository>
+            <id>nexus</id>
+            <url>http://172.31.12.165:8081/repository/maven-releases/</url>           <!--Replace the Nexus Private IP in this line-->
+        </repository>
+  </distributionManagement>
+
   <artifactId>webapp</artifactId>
   <packaging>war</packaging>
   <name>Webapp</name>
